syntax = "proto3";
package cosmos.sanction.v1beta1;

import "cosmos/sanction/v1beta1/sanction.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/sanction";

// Deprecated: This package has moved to provenance/sanction/v1.

// GenesisState defines the sanction module's genesis state.
//
// Deprecated: Switch to provenance/sanction/v1.
message GenesisState {
  option deprecated = true;

  // params are the sanction module parameters.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  Params params = 1 [deprecated = true];
  // sanctioned_addresses defines account addresses that are sanctioned.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  repeated string sanctioned_addresses = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // temporary_entries defines the temporary entries associated with on-going governance proposals.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  repeated TemporaryEntry temporary_entries = 3 [deprecated = true];
}