syntax = "proto3";
package cosmos.sanction.v1beta1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/sanction";

// Deprecated: This package has moved to provenance/sanction/v1.

// Params defines the configurable parameters of the sanction module.
//
// Deprecated: Switch to provenance/sanction/v1.
message Params {
  option deprecated = true;

  // immediate_sanction_min_deposit is the minimum deposit for a sanction to happen immediately.
  // If this is zero, immediate sanctioning is not available.
  // Otherwise, if a sanction governance proposal is issued with a deposit at least this large, a temporary sanction
  // will be immediately issued that will expire when voting ends on the governance proposal.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  repeated cosmos.base.v1beta1.Coin immediate_sanction_min_deposit = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", deprecated = true];

  // immediate_unsanction_min_deposit is the minimum deposit for an unsanction to happen immediately.
  // If this is zero, immediate unsanctioning is not available.
  // Otherwise, if an unsanction governance proposal is issued with a deposit at least this large, a temporary
  // unsanction will be immediately issued that will expire when voting ends on the governance proposal.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  repeated cosmos.base.v1beta1.Coin immediate_unsanction_min_deposit = 2
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", deprecated = true];
}

// TemporaryEntry defines the information involved in a temporary sanction or unsanction.
//
// Deprecated: Switch to provenance/sanction/v1.
message TemporaryEntry {
  option deprecated = true;

  // address is the address of this temporary entry.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // proposal_id is the governance proposal id associated with this temporary entry.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  uint64 proposal_id = 2 [deprecated = true];
  // status is whether the entry is a sanction or unsanction.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  TempStatus status = 3 [deprecated = true];
}

// TempStatus is whether a temporary entry is a sanction or unsanction.
//
// Deprecated: Switch to provenance/sanction/v1.
enum TempStatus {
  option deprecated = true;
  option (gogoproto.goproto_enum_prefix) = false;

  // TEMP_STATUS_UNSPECIFIED represents and unspecified status value.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  TEMP_STATUS_UNSPECIFIED = 0 [deprecated = true];
  // TEMP_STATUS_SANCTIONED indicates a sanction is in place.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  TEMP_STATUS_SANCTIONED = 1 [deprecated = true];
  // TEMP_STATUS_UNSANCTIONED indicates an unsanctioned is in place.
  //
  // Deprecated: Switch to provenance/sanction/v1.
  TEMP_STATUS_UNSANCTIONED = 2 [deprecated = true];
}